make unit test 100% pass rate